Fixes whitespace showing on the right for mobile devices Fixes share buttons stacking on mobile Fixes twitter follow button brom breaking out of the container on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -251,6 +251,7 @@ div.comm-body {
   padding-top:40px;
   padding-bottom:40px;
   .header {
+
     position:relative;
     left:-70px;
     text-align:center;
@@ -260,7 +261,6 @@ div.comm-body {
       display: inline;
       position:relative;
       bottom: 10px;
-      left: 40px;
     }
   }
   h2,h3,h4,h1 {
